--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,7 +1,4 @@
-- name: Install base packages
-  apt: 
-    name:
-      - curl
-      - git
-      - vim
-  sudo: yes
+- name: Install curl
+  apt:
+    name: curl
+    state: latest
