--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
 - name: Install zsh package
-  apt: name=zsh
-  sudo: yes
+  apt: 
+    name: zsh
+    sudo: yes
 
 - name: Set zsh as default shell
-  user: name=weimeng shell=/usr/bin/zsh
+  user: name=francommit shell=/usr/bin/zsh
   sudo: yes
 
 - name: Check if Oh My Zsh is already installed
