--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -16,3 +16,8 @@
   shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
   when: omzsh_status.stat.isdir is not defined
   ignore_errors: yes
+
+- name: creating new ~/.zshrc
+  template:
+    src: zshrc.j2
+    dest: "{{ item.home }}/.zshrc"
