--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -20,6 +20,4 @@
 - name: creating new ~/.zshrc
   template:
     src: zshrc.j2
-    dest: "{{ item.home }}/.zshrc"
-  with_items: "{{ ohmyzsh_users }}"
-  tags: ohmyzsh_config
+    dest: "/home/francommit/.zshrc"
